--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "PUBLIC_URL='https://mark24code.github.io/play-css/' node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
